# tdl_bot

./: .gitignore  Cargo.toml  shell.nix
src/: commands.rs  handler.rs  main.rs  read_conf.rs
