[package]
name = "tdl-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
indexmap = { version = "2.9.0", features = ["serde"] }
poise = "0.6.1"
reqwest = { version = "0.12.22", features = ["json"]}
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.143"
serenity = {version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache"] }
songbird = "0.5.0"
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.9.3"
